--- a/.github/workflows /deploy-vite.yml
+++ b/.github/workflows /deploy-vite.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Start ssh-agent and add key
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY_MAD }}
 
       - name: Disable host key check
         run: |
@@ -56,13 +56,16 @@ jobs:
 
       - name: Deploy dist folder to server via rsync
         run: |
-          if [ -z "${DEPLOY_USER}" ] || [ -z "${DEPLOY_HOST}" ] || [ -z "${DEPLOY_PATH}" ]; then
-            echo "Missing DEPLOY_USER, DEPLOY_HOST, or DEPLOY_PATH secrets. Aborting." >&2
-            exit 1
-          fi
+          # fallback to known values if secrets are not provided
+          DEPLOY_USER_RESOLVED="${DEPLOY_USER:-u3330235}"
+          DEPLOY_HOST_RESOLVED="${DEPLOY_HOST:-37.140.192.181}"
+          DEPLOY_PATH_RESOLVED="${DEPLOY_PATH:-/var/www/u3330235/data/www/podolsk.mad.moclean.ru/}"
+
+          echo "Deploying to ${DEPLOY_USER_RESOLVED}@${DEPLOY_HOST_RESOLVED}:${DEPLOY_PATH_RESOLVED}"
+
           rsync -avzr --delete \
             --exclude=".git" \
             --exclude=".github" \
             -e "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" \
             ./dist/ \
-            ${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_PATH}
+            ${DEPLOY_USER_RESOLVED}@${DEPLOY_HOST_RESOLVED}:${DEPLOY_PATH_RESOLVED}
