--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 # В production/default используем живой бэкенд
-VITE_API_BASE="https://mad-podolsk-vue-karinausadba.amvera.io"
+VITE_API_BASE="https://api.podolsk.mad.moclean.ru"
