--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           host: 89.104.74.37
           username: apps
-          key: ${{ secrets.VPS_SSH_KEY_MAIN }}
+          key: ${{ secrets.VPS_SSH_KEY }}
           source: "frontend/dist/*"
           target: "/home/apps/mad_podolsk_vue_dist_new"
           rm: true
@@ -41,7 +41,7 @@ jobs:
         with:
           host: 89.104.74.37
           username: apps
-          key: ${{ secrets.VPS_SSH_KEY_MAIN }}
+          key: ${{ secrets.VPS_SSH_KEY }}
           script: |
             set -e
 
